Add Some transactionService classs and fix some issues